SDI-119 Test for tile and home page

--- a/server/views/pages/index.njk
+++ b/server/views/pages/index.njk
@@ -7,7 +7,7 @@
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">HMPPS Nomis synchronisation and migration</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">NOMIS migration and synchronisation dashboard</h1>
     </div>
 
     <div class="homepage-content">
