--- a/server/views/pages/index.njk
+++ b/server/views/pages/index.njk
@@ -1,12 +1,30 @@
 {% extends "../partials/layout.njk" %}
+{% from "./components/card/card.njk" import card %}
 
 {% set pageTitle = applicationName + " - Home" %}
 
 {% block content %}
 
   <main class="app-container govuk-body">
-    <h1>This site is under construction...</h1>
-    <p>Please check back later when there is content to view.</p>
+    <div class="govuk-width-container">
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">HMPPS Nomis synchronisation and migration</h1>
+    </div>
+
+    <div class="homepage-content">
+      <div class="govuk-width-container">
+        <ul class="govuk-grid-row card-group">
+          <li class="govuk-grid-column-one-third card-group__item">
+            {{ card({
+              "href": "/visits-migration",
+              "clickable": "true",
+              "heading": "Visits Migration",
+              "description": "migration and synchronisation information",
+              "id": "visit-migration"
+            }) }}
+          </li>
+        </ul>
+      </div>
+    </div>
   </main>
 
 {% endblock %}
