--- a/server/views/pages/index.njk
+++ b/server/views/pages/index.njk
@@ -1,12 +1,31 @@
 {% extends "../partials/layout.njk" %}
+{% from "./components/card/card.njk" import card %}
 
 {% set pageTitle = applicationName + " - Home" %}
 
 {% block content %}
 
   <main class="app-container govuk-body">
-    <h1>This site is under construction...</h1>
-    <p>Please check back later when there is content to view.</p>
+    <div class="govuk-width-container">
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">NOMIS migration and synchronisation dashboard</h1>
+    </div>
+
+    <div class="homepage-content">
+      <div class="govuk-width-container">
+        <ul class="govuk-grid-row card-group">
+          {% for dashboard in dashboards %}
+            <li class="govuk-grid-column-one-third card-group__item">
+              {{ card({
+                "href": dashboard.href,
+                "clickable": "true",
+                "heading": dashboard.heading,
+                "description": dashboard.description,
+                "id": dashboard.id
+              }) }}
+            </li>
+          {% endfor %}
+      </div>
+    </div>
   </main>
 
 {% endblock %}
