--- a/server/views/pages/visits/startVisitsMigrationConfirmation.njk
+++ b/server/views/pages/visits/startVisitsMigrationConfirmation.njk
@@ -1,4 +1,5 @@
 {% extends "../../partials/layout.njk" %}
+{% from "govuk/components/panel/macro.njk" import govukPanel %}
 
 {% set pageTitle = applicationName + " - Visits migration started" %}
 
@@ -7,6 +8,21 @@
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
       <h1 class="govuk-heading-l govuk-!-margin-top-7">Visits migration started</h1>
+    </div>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        {% set html %}
+        <div id="confirmationMessage">
+          <p>Migration id: <strong>{{form.migrationId}}</strong></p>
+          <p>Estimated number of visits to be migrated: <strong>{{form.estimatedCount}}</strong></p>
+        </div>  
+        {% endset %}
+
+        {{ govukPanel({
+          titleText: "Visits migration has successfully started",
+          html: html
+        }) }}
+      </div  
     </div>
   </main>
 
