--- a/server/views/pages/visits/visitsMigration.njk
+++ b/server/views/pages/visits/visitsMigration.njk
@@ -1,20 +1,130 @@
 {% extends "../../partials/layout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "moj/components/filter/macro.njk" import mojFilter %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/table/macro.njk" import govukTable %}
 
 {% set pageTitle = applicationName + " - Visits migration" %}
 
 {% block content %}
 
-  <main class="app-container govuk-body">
-    <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Visits migration</h1>
-      {{ govukButton({
-        text: "Start new migration",
-        href: "/visits-migration/start",
-        isStartButton: true
-      }) }}
 
+  {% set filterOptionsHtml %}
+    {{ govukInput({
+      label: { text: "Name" if dpsSearch else "Name, username or email address", classes: "govuk-label--s" },
+      classes: "govuk-input--width-20 govuk-fieldset__legend--s",
+      value: currentFilter.user,
+      id: "user",
+      name: "user",
+      hint: {
+        text: "Will match the user's name or username"
+      },
+      errorMessage: errors
+    }) }}
+  {% endset %}
+
+
+  <div class="govuk-grid-row govuk-body">
+    <h1 class="govuk-heading-l">Visits migration</h1>
+
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+        <div class="moj-filter-layout">
+          <div class="moj-filter-layout__filter">
+            <form id="filter-form" action="TODOACTION" novalidate>
+              {{ filterOptionsHtml }}
+            </form>
+          </div>
+          <div class="moj-filter-layout__content" data-qa="migration-results-div">
+            <div>
+              <div class="govuk-grid-column-full">
+                <div class="moj-action-bar__filterTagsContainer govuk-!-margin-bottom-5"></div>
+                {% if migrations.length %}
+
+                  {% set rows = [] %}
+                  {% for u in migrations %}
+
+
+                    {% set cellHtml %}
+                      <div class="govuk-!-margin-bottom-5">
+                        <div class="govuk-grid-row govuk-!-margin-bottom-2">
+                          <div class="govuk-grid-column-two-thirds">
+                            <span class="govuk-label--s migration-results-label">Migration Id: </span>
+                            <span data-qa="migration-id" class="govuk-!-margin-left-2">{{ u.migrationId }}</span>
+                          </div>
+                          <div class="govuk-grid-column-one-third">
+                            <span class="govuk-label--s migration-results-label">Status: </span>
+                            <span data-qa="status" class="govuk-!-margin-left-2">{{ u.status }}</span>
+                          </div>
+                        </div>
+                        <div class="govuk-grid-row govuk-!-margin-bottom-2">
+                          <div class="govuk-grid-column-full">
+                            <span class="govuk-label--s">Started: </span>
+                            <span data-qa="whenStarted" class="govuk-!-margin-left-2">{{ u.whenStarted | formatDate('D MMMM YYYY - HH:mm') }}</span>
+                            {% if u.whenEnded %}
+                              <span class="govuk-label--s govuk-!-margin-left-3">Ended: </span>
+                              <span data-qa="whenEnded" class="govuk-!-margin-left-2">{{ u.whenEnded | formatDate('D MMMM YYYY - HH:mm') }}</span>
+                            {% endif %}
+                          </div>
+                        </div>
+
+                        <div class="govuk-grid-row govuk-!-margin-bottom-2">
+                          <div class="govuk-grid-column-full">
+                            <span class="govuk-label--s">Migrated: </span>
+                            <span data-qa="migratedCount" class="govuk-!-margin-left-1">{{ u.recordsMigrated }}</span>
+                            <span class="govuk-label--s govuk-!-margin-left-5">Failed: </span>
+                            <span data-qa="failedCount" class="govuk-!-margin-left-1">{{ u.recordsFailed }}</span>
+                            <span class="govuk-label--s govuk-!-margin-left-5">Estimated: </span>
+                            <span data-qa="estimatedCount" class="govuk-!-margin-left-1">{{ u.estimatedRecordCount }}</span>
+                          </div>
+                        </div>
+
+                        <div class="govuk-grid-row govuk-!-margin-bottom-2">
+                          <div class="govuk-grid-column-full">
+                            <span class="govuk-label--s migration-results-label">Filter used:</span>
+                          </div>
+                          {% if u.filterPrisonIds %}
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-label--s">Prisons:</span><span data-qa="filterPrisonIds" class="govuk-!-margin-left-2">{{ u.filterPrisonIds }}</span>
+                            </div>
+                          {% endif %}
+                          {% if u.filterVisitTypes %}
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-label--s">Visit types:</span><span data-qa="filterVisitTypes" class="govuk-!-margin-left-2">{{ u.filterVisitTypes }}</span>
+                            </div>
+                          {% endif %}
+                          {% if u.filterFromDate %}
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-label--s">From date:</span><span data-qa="filterFromDate" class="govuk-!-margin-left-2">{{ u.filterFromDate | formatDate('D MMMM YYYY - HH:mm') }}</span>
+                            </div>
+                          {% endif %}
+                          {% if u.filterToDate %}
+                            <div class="govuk-grid-column-full">
+                              <span class="govuk-label--s">To date:</span><span data-qa="filterToDate" class="govuk-!-margin-left-2"> {{ u.filterToDate | formatDate('D MMMM YYYY - HH:mm') }}</span>
+                            </div>
+                          {% endif %}
+                        </div>
+                      </div>
+                    {% endset %}
+
+                    {% set rows = (rows.push([
+                      { html: cellHtml }
+                    ]), rows) %}
+                  {% endfor %}
+
+                  {{ govukTable({
+                    rows: rows
+                  }) }}
+
+                {% else %}
+                  I am good!
+                {% endif %}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </main>
+  </div>
 
 {% endblock %}
