sdi-125 fix test after merge

--- a/server/views/partials/header.njk
+++ b/server/views/partials/header.njk
@@ -33,7 +33,7 @@
       <ul class="dps-header__navigation">
         <li class="dps-header__navigation__item">
           <a class="dps-header__link" href="{{homeUrl or notmUrl}}/account-details?redirect_uri={{ user.returnUrl | urlencode }}&client_id={{ user.clientID }}" data-qa="manage-account-link">
-            <span data-qa="logged-in-name">{{ user.displayName }}</span>
+            <span data-qa="header-user-name">{{ user.displayName | initialiseName }}</span>
             <span class="dps-header__link__sub-text">Manage your details</span>
           </a>
         </li>
