sdi-125 fix test after merge

--- a/server/views/partials/header.njk
+++ b/server/views/partials/header.njk
@@ -32,14 +32,14 @@
     <nav aria-label="Account navigation">
       <ul class="dps-header__navigation">
         <li class="dps-header__navigation__item">
-          <a class="dps-header__link" href="{{homeUrl or notmUrl}}/account-details?redirect_uri={{ user.returnUrl | urlencode }}&client_id={{ user.clientID }}" data-qa="manage-account-link">
+          <a class="dps-header__link" href="{{homeUrl or notmUrl}}/account-details?redirect_uri={{ user.returnUrl | urlencode }}&client_id={{ user.clientID }}" data-qa="manageDetails">
             <span data-qa="header-user-name">{{ user.displayName | initialiseName }}</span>
             <span class="dps-header__link__sub-text">Manage your details</span>
           </a>
         </li>
 
         <li class="dps-header__navigation__item">
-          <a class="dps-header__link" href="/auth/sign-out">Sign out</a>
+          <a data-qa="signOut" class="dps-header__link" href="/sign-out">Sign out</a>
         </li>
       </ul>
     </nav>
