--- a/server/views/pages/visits/visitsMigration.njk
+++ b/server/views/pages/visits/visitsMigration.njk
@@ -3,10 +3,15 @@
 {% from "moj/components/filter/macro.njk" import mojFilter %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
 {% set pageTitle = applicationName + " - Visits migration" %}
 
 {% block content %}
+  {{ govukBackLink({
+    text: "Back",
+    href: '/'
+  }) }}
 
 
   {% set filterOptionsHtml %}
