SDI-119 View DLQ messages

--- a/server/views/pages/visits/startVisitsMigrationConfirmation.njk
+++ b/server/views/pages/visits/startVisitsMigrationConfirmation.njk
@@ -16,7 +16,7 @@
       <h1 class="govuk-heading-l govuk-!-margin-top-7">Visits migration started</h1>
     </div>
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full-width">
+      <div class="govuk-grid-column-full">
         {% set html %}
         <div id="confirmationMessage">
           Migration id: <strong>{{form.migrationId}}</strong><br/>
