--- a/server/views/pages/visits/visitsMigrationFailures.njk
+++ b/server/views/pages/visits/visitsMigrationFailures.njk
@@ -37,6 +37,11 @@
               </div>
               <div class="govuk-grid-row govuk-!-margin-bottom-2">
                 <div class="govuk-grid-column-full">
+                  Get more details from <a href="{{message.applicationInsightsLink}}" target="_blank">Application Insights</a>
+                </div>
+              </div>
+              <div class="govuk-grid-row govuk-!-margin-bottom-2">
+                <div class="govuk-grid-column-full">
                   {% if message.body.type %}
                     <span class="govuk-!-font-weight-bold govuk-!-padding-right-2">Visit ID:</span>{{message.body.context.body.visitId}}
                   {% endif %}
@@ -46,8 +51,8 @@
                 <div class="govuk-grid-column-full">
                 {{ govukDetails({
                   summaryText: "Full message",
-                  text: message | json
-                }) }}
+                  text: message | json(['applicationInsightsLink'])
+                }) }}                
                 </div>
               </div>
             </div>
