--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -32,6 +32,7 @@
   {# Run JavaScript at end of the
   <body>, to avoid blocking the initial render. #}
   <script src="/assets/govuk/all.js"></script>
-  <script src="/assets/govukFrontendInit.js"></script>
   <script src="/assets/moj/all.js"></script>
+  <script src="/assets/govukFrontendInit.js"></script>
+  <script src="/assets/mojFrontendInit.js"></script>
 {% endblock %}
