sdi-134 progress and failure links plus missing validation test

--- a/server/views/pages/visits/startVisitsMigration.njk
+++ b/server/views/pages/visits/startVisitsMigration.njk
@@ -130,7 +130,7 @@
                                 name: "action",
                                 classes: "govuk-button--secondary"
                             }) }}
-                            <a class="govuk-link" href={{ backLink  }}>Cancel</a>
+                            <a class="govuk-link" href="/visits-migration">Cancel</a>
                         </div>
                     {% endcall %}
                 </form>
