--- a/server/views/pages/visits/visitsMigrationDetails.njk
+++ b/server/views/pages/visits/visitsMigrationDetails.njk
@@ -2,6 +2,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% set pageTitle = applicationName + " - Visits migration details" %}
 
@@ -16,6 +17,36 @@
     <div class="govuk-width-container">
       <h1 class="govuk-heading-l govuk-!-margin-top-7">Visits migration details</h1>
     </div>
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+      {% set detailsHtml %}
+      <p> 
+        When a migration is in progress a background service counts all visits that can possibly be migrated and adds each visit to a queue. That initial count is the <b>Estimated</b> number. 
+        That number does not take into account if any record had previously been migrated. Also, if a visit was created just after the initial calculation it may still be processed.
+        At the beginning of the process the <b>Still to be processed</b> count will go up until it eventually gets close to the <b>Estimated</b> number. The <b>Still to be processed</b> number represents the number of records that still requiring processing. By the end of the process that number will go to zero.
+        </p> 
+        <p>
+          The <b>Migrated</b> number represents the number of records that have successfully migrated in this session. By the end of the process that number should equal the <b>Estimated</b> number if all records found in NOMIS were successfully migrated.
+        </p>
+        <p>
+          The <b>Failed</b> number represents the number of records that failed to migrate. A failed record is held in a dead letter queue. It may take a long time before any records that are destined to fail actaully appear in this number because they retried serveral times, each time going to the back of the queue.
+        </p>    
+        <p>
+          The <b>Failed</b> number techincally is just the current number records on the dead letter queue. So messages that have not been fixed from the previous migration would appear in this number, hence it is important a new migration should not be started before any failed records from previous migrations are delt with (either fixed or discarded).
+        </p>  
+        <p>
+          <b>Note:</b> Since the numbers are counts from the AWS SQS messaging system, that itself are just approximations, numbers can go up and down when the <b>Refresh</b> button is pressed.
+        </p>  
+       
+      {% endset %}
+
+      {{ govukDetails({
+        summaryText: "What do all the numbers mean?",
+        html: detailsHtml
+      }) }}                
+    </div>
+</div>
+
     <div class="govuk-grid-row">
       {% set filterHtml %}
         {% if migration.history.filterPrisonIds %}
@@ -127,7 +158,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         {{ govukButton({
-          text: "Refesh",
+          text: "Refresh",
           href: '/visits-migration/details?migrationId=' + migration.history.migrationId,
           classes: "govuk-button--secondary"
         }) }}
